resolving image issue

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
-    
+
 </head>
 
 <body>
     <div class="fullpage">
         <div class="overlayfull" id="overlayfull"></div>
-        <div class="leftpole">
+        <div class="leftpole leftbar">
             <div class="leftpoletopdiv">
                 <div class="leftpoletopsec">
                     <div class="leftpoletopimg">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="leftwindow" id="leftwindow">
+        <div class="leftwindow leftbar" id="leftwindow">
             <div class="closeleftwindow">
                 <i class="fas fa-times" id="closeleftwindow"></i>
             </div>
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="lefttab darkmodebg" id="lefttab">
+        <div class="lefttab darkmodebg leftbar" id="lefttab">
             <div class="nametitle darkmodebg" id="nametitle" onclick="location.href='#topp';">
                 <!--onclick topp-->
                 <h1 class="inthemef">Shashank</h1>
@@ -227,14 +227,14 @@
                                 value="#ff7600">
                         </div>
                     </div>
-                    <div class = 'toggle-switch'>
+                    <div class='toggle-switch'>
                         <div>
                             <p class="Darkmodetext">Dark Mode: </p>
                         </div>
                         <div style="height: 100%;display: flex;align-items: center;position: relative;left: 6px;">
                             <label class="darkmodeLabel">
-                                <input type = 'checkbox' class="darkmodeinput" id="darkmodecheckbox">
-                                <span class = 'darkmodeslider'></span>
+                                <input type='checkbox' class="darkmodeinput" id="darkmodecheckbox">
+                                <span class='darkmodeslider'></span>
                             </label>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                     <p>PROJECTS</p>
                 </div>
                 <div class="prcontainer  darkmodefont">
-                    <div class="prcontent darkmodeshadow">
+                    <div class="prcontent">
                         <!-- pr Road accidents dashboard -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn3">
                             <div class="prsonoff" id="prsonoffn3">
@@ -325,10 +325,12 @@
                                 </div>
                                 <hr>
                                 <div class="prdeffooter">
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn3" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn3"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon3" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon3"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -376,7 +378,8 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn2" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn2"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
                                 </div>
@@ -418,10 +421,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn1" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn1"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon1" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon1"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -464,7 +469,8 @@
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn0" title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon0" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon0"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -501,10 +507,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject1" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject1"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo1" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo1"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -544,10 +552,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject2" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject2"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo2" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo2"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -584,10 +594,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject3" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject3"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo3" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo3"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -627,10 +639,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject4" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject4"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo4" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo4"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -670,10 +684,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject5" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject5"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo5" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo5"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -715,7 +731,8 @@
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject6" title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo6" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo6"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -755,10 +772,12 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject7" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject7"
+                                        title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo7" title="View GitHub repository">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo7"
+                                        title="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </div>
                                 </div>
@@ -925,7 +944,8 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"><em> <b>Developed automation scripts  </b>for <b>ONELERN </b> and <b>NPCI</b> Projects.</em></p>
+                                    <p id="expercardintro"><em> <b>Developed automation scripts </b>for <b>ONELERN </b>
+                                            and <b>NPCI</b> Projects.</em></p>
                                     <ul>
                                         <li>
                                             <p>Developed and implemented automation frameworks for multiple projects,
@@ -1031,14 +1051,16 @@
                     <div class="awardscontent">
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certicareeressmicrosoft">Career Essentials in Data Analysis by
+                                <p class="awardtitle inthemef" id="certicareeressmicrosoft">Career Essentials in Data
+                                    Analysis by
                                     Microsoft and LinkedIn Learning</p>
                                 <p class="awardtype">Certificate of Completion | June 2023</p>
                             </div>
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by Microsoft and LinkedIn Learning for completion of the course.
+                                        I have been certified by Microsoft and LinkedIn Learning for completion of the
+                                        course.
                                     </li>
                                 </ul>
                             </div>
@@ -1059,7 +1081,8 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certiadvsql">Advanced SQL Certificate by HackerRank</p>
+                                <p class="awardtitle inthemef" id="certiadvsql">Advanced SQL Certificate by HackerRank
+                                </p>
                                 <p class="awardtype">Certificate of Appreciation | April 2023</p>
                             </div>
                             <div class="awardcardbody">
@@ -1187,7 +1210,8 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have earned by clearing the problem solving assessment organised by HackerRank.
+                                        I have earned by clearing the problem solving assessment organised by
+                                        HackerRank.
                                     </li>
                                 </ul>
                             </div>
