resolved image issue

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body onload="loadimg();">
     <div class="fullpage">
         <div class="overlayfull" id="overlayfull"></div>
         <div class="leftpole leftbar">
