Added chatbot project and added medium link

--- a/index.html
+++ b/index.html
@@ -288,6 +288,66 @@
                 </div>
                 <div class="prcontainer  darkmodefont">
                     <div class="prcontent">
+                        <!-- pr Chat bot application -->
+                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn4">
+                            <div class="prsonoff" id="prsonoffn4">
+                                <div class="prgif" id="prgifn4">
+                                    <img src="img/chatbot.png" alt="chatbot.png"
+                                        class="prgifgif" id="prgifgifn4">
+                                </div>
+                                <div class="prtitle inthemef" id="prtitlen4">
+                                    <p id="prpn4">Chatbot using Diagflow</p>
+                                    <div class="proptions" id="proptionn4">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </div>
+                                </div>
+                                <div class="prdisc">
+                                    <p>A user-friendly chatbot for food ordering and tracking using Dialogflow, FastAPI, 
+                                        and GitHub, emphasizing adaptability and collaboration.</p>
+                                </div>
+                            </div>
+                            <div class="prshidonoff darkmodebg darkmodefont" id="prshidonoffn4">
+                                <div class="prdefhead">
+                                    <p>Accomplishments</p>
+                                    <i class="fas fa-times" id="closeoptn4"></i>
+                                </div>
+                                <div class="prdefbody">
+                                    <ul>
+                                        <li>
+                                            <p>Integrated a user-friendly frontend with the chatbot, enabling menu exploration, 
+                                                ordering, and order tracking within one interface.</p>
+                                        </li>
+                                        <li>
+                                            <p>Proactively addressed challenges, ensured adaptability, and committed to ongoing 
+                                                project enhancements despite limitations, delivering a user-centric experience.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <hr>
+                                <div class="prdeffooter">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn4"
+                                        title="View project">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepon4"
+                                        title="View GitHub repository">
+                                        <i class="fab fa-github"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewarticlen4"
+                                        title="View article on Medium.com">
+                                        <i class="fab fa-medium"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewavideon4"
+                                        title="View demonstration video">
+                                        <i class="fas fa-file-video"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
                         <!-- pr Road accidents dashboard -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn3">
                             <div class="prsonoff" id="prsonoffn3">
@@ -1255,8 +1315,9 @@
                                     onclick="window.open(`https://www.linkedin.com/in/shashankmankala/`, '_blank');">
                                     <i class="fab fa-linkedin-in"></i>
                                 </div>
-                                <div class="contactoptlogodiv inthemeb darkmodeshadow" title="Twitter">
-                                    <i class="fab fa-twitter"></i>
+                                <div class="contactoptlogodiv inthemeb darkmodeshadow" title="Medium.com"
+                                    onclick="window.open(`https://medium.com/@shashankmankala`, '_blank');">
+                                    <i class="fab fa-medium"></i>
                                 </div>
                             </div>
                         </div>
