Modified all redirects to modals

--- a/fbreason.html
+++ b/fbreason.html
@@ -27,7 +27,7 @@
         <h2>As per the Terms and Conditions of GitHub </h2>
         <p>We cannot upload a cloned site to their pages. So, I will be publishing this website soon on another domain and updating it ASAP.</p>
         <p>Your understanding is greatly appreciated!</p>
-        <p>For Repository, you can check out <a href="https://github.com/Shashank-mankala1/facebookselfchallenge" class="anc">this link</a></p>
+        <p>For Repository, you can check out <a target="_blank" href="https://github.com/Shashank-mankala1/facebookselfchallenge" class="anc">this link</a></p>
     </div>
 </body>
 </html>
