--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property='og:title' content='Shashank Mankala Portfolio' />
+    <meta property='og:image'
+        content='https://img.freepik.com/vektoren-premium/portfolio-wort-mit-bleistift-statt-buchstabe-i-kunst-und-designgalerie-konzept-vektorkonzeptionelles-kreatives-logo-oder-poster-mit-spezieller-schriftart_570429-3743.jpg?w=2000' />
+    <meta property='og:description'
+        content='My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.' />
+    <meta property='og:url' content='https://shashank-mankala1.github.io/portfolio/' />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <meta property="og:type" content='website' />
+
+
+
     <meta name="description"
         content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta name="author" content="Shashank Mankala">
     <meta name="keywords" content="HTML, CSS, Javascript, JS, Shashank Mankala, portfolio, website">
-    <meta property="og:description"
-        content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
-    <meta property="og:site_name" content="" />
-    <meta property="og:title" content="">
-    <meta property="og:image" itemprop="image"
-        content="https://drive.google.com/file/d/1BAB-UlHK7BsZkCo5Cx5pQX-ugf2bcAXr/view?usp=sharing">
-    <link itemprop="thumbnailUrl"
-        href="https://drive.google.com/file/d/1BAB-UlHK7BsZkCo5Cx5pQX-ugf2bcAXr/view?usp=sharing">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:updated_time" content="updatedtime">
-    <meta property="og:locale" content="en_GB" />
 
     <link rel="icon" type="image/png" href="img/mylogo1.png">
     <title>Shashank Mankala | Computer Science Engineer</title>
@@ -209,7 +211,7 @@
 
                 </div>
                 <div class="framebody">
-                    <iframe src="Resume.pdf" frameborder="0" width="100%" height="100%"></iframe>
+                    <iframe src="Resume.pdf#zoom=90" frameborder="0" width="100%" height="100%"></iframe>
                 </div>
                 <div class="framebottom">
                     <div class="framebottombtns">
@@ -222,6 +224,74 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Certificates Frame -->
+        <div class="certificatecontainer" id="certificatemodal">
+            <div class="certificateframediv">
+                <div class="cframeheading">
+                    <h3 id="cframeheading">Certificate</h3>
+                    <div class="darkmodeshadow" class="closecertificateframe" id="closecertificateframe">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="cframebody">
+                    <iframe id="certificateiframe" src="" frameborder="0" width="100%" height="100%"
+                        allow="autoplay"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Feedback Frame -->
+        <div class="feedbackcontainer" id="feedbackmodal">
+            <div class="feedbackframediv">
+                <div class="cframeheading">
+                    <h3 id="cframeheading">Feedback</h3>
+                    <div class="darkmodeshadow" class="closefeedbackframe" id="closefeedbackframe">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="cframebody">
+                    <iframe id="feedbackiframe" src="Feedback.html" frameborder="0" width="100%" height="100%"
+                        allow="autoplay"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Facebook Frame -->
+        <div class="facebookcontainer" id="facebookmodal">
+            <div class="facebookframediv">
+                <div class="cframeheading">
+                    <h3 id="cframeheading">Facebook Project</h3>
+                    <div class="darkmodeshadow" class="closefacebookframe" id="closefacebookframe">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="cframebody">
+                    <iframe id="facebookiframe" src="fbreason.html" frameborder="0" width="100%" height="100%"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- emppy Frame -->
+        <div class="emppycontainer" id="emppymodal">
+            <div class="emppyframediv">
+                <div class="cframeheading">
+                    <h3 id="cframeheading">Employee Recruitment System in Python</h3>
+                    <div class="darkmodeshadow" class="closeemppyframe" id="closeemppyframe">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="cframebody">
+                    <iframe id="emppyiframe" src="ERSpythonreason.html" frameborder="0" width="100%" height="100%"></iframe>
+                </div>
+            </div>
+        </div>
+
+
 
 
 
@@ -612,7 +682,7 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject1"
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="facebookdiv"
                                         title="View project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </div>
@@ -833,9 +903,9 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                    <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewproject6" title="View project">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow" id="emppydiv" title="View project">
                                         <i class="fas fa-external-link-alt"></i>
-                                    </div> -->
+                                    </div>
                                     <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewrepo6"
                                         title="View GitHub repository">
                                         <i class="fab fa-github"></i>
@@ -1182,6 +1252,9 @@
                     </div>
                 </div>
             </section>
+
+
+
             <section class="awardss" id="awardss">
                 <div class="secheading inthemeb">
                     <p>AWARDS/ CERTIFICATIONS</p>
@@ -1190,7 +1263,9 @@
                     <div class="awardscontent">
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certicareeressmicrosoft">Career Essentials in Data
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1aVLrxgY3tWsWoDRguyGYdCzodlVhT2xB/preview`)">
+                                    Career Essentials in Data
                                     Analysis by
                                     Microsoft and LinkedIn Learning</p>
                                 <p class="awardtype">Certificate of Completion | June 2023</p>
@@ -1207,7 +1282,8 @@
 
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certisqlleetcode">Top 50 SQL By Leetcode</p>
+                                <p class="awardtitle inthemef" onclick="viewCertificate(`./img/Top_SQL_50.gif`)">Top 50
+                                    SQL By Leetcode</p>
                                 <p class="awardtype">Earned SQL badge | June 2023</p>
                             </div>
                             <div class="awardcardbody">
@@ -1220,7 +1296,9 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certiadvsql">Advanced SQL Certificate by HackerRank
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1-rVzff0koq_dlMpteJs6gIu8hm6aAoEp/preview`)">
+                                    Advanced SQL Certificate by HackerRank
                                 </p>
                                 <p class="awardtype">Certificate of Appreciation | April 2023</p>
                             </div>
@@ -1235,7 +1313,9 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certimongo">MongoDB M001</p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1wn9kKFqMDsFP6dg7bRUU9x-FhNdrATN-/preview`)">
+                                    MongoDB M001</p>
                                 <p class="awardtype">Certificate of Completion | April 2022</p>
                             </div>
                             <div class="awardcardbody">
@@ -1250,7 +1330,9 @@
 
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certigfg">GFG DSA self paced course</p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1ekCK86dcg00hYUSau5H2xyLbDseozH6Z/preview`)">
+                                    GFG DSA self paced course</p>
                                 <p class="awardtype">Certificate of Completion | December 2021</p>
                             </div>
                             <div class="awardcardbody">
@@ -1263,7 +1345,9 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certisnackdown">Codechef Snackdown 2021 </p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1ag9XE4Rc2Ob47I7PstDIZb_ynI4Hl_Fp/preview`)">
+                                    Codechef Snackdown 2021 </p>
                                 <p class="awardtype">Certificate of Appreciation | December 2021</p>
                             </div>
                             <div class="awardcardbody">
@@ -1280,7 +1364,9 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certijumpstart">JUMPSTART FINALE CONTESTANT</p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1XuHZXW10OXnKD5v8psMz8CD2RiFf4nCN/preview`)">
+                                    JUMPSTART FINALE CONTESTANT</p>
                                 <p class="awardtype">Certificate of Appreciation | August 2021</p>
                             </div>
                             <div class="awardcardbody">
@@ -1295,7 +1381,9 @@
 
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certimodern">MODERN BIG DATA ANALYSIS WITH SQL</p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1yOh00RgIk7a5_83aBusAq7A7YKlZDJ-l/preview`)">
+                                    MODERN BIG DATA ANALYSIS WITH SQL</p>
                                 <p class="awardtype">Certificate of Appreciation | July 2021</p>
                             </div>
                             <div class="awardcardbody">
@@ -1313,7 +1401,9 @@
                         </div>
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certicrash">CRASH COURSE ON PYTHON </p>
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/1CXRi0UTb0iYy9zjcIYfxJE12RDMokA1j/preview`)">
+                                    CRASH COURSE ON PYTHON </p>
                                 <p class="awardtype">Course Certificate by GOOGLE | May 2021</p>
                             </div>
                             <div class="awardcardbody">
@@ -1344,7 +1434,9 @@
 
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
-                                <p class="awardtitle inthemef" id="certiproblemsol">PROBLEM SOLVING CERTIFICATE BY
+                                <p class="awardtitle inthemef"
+                                    onclick="viewCertificate(`https://drive.google.com/file/d/13HrosKFwiY55yyFtKxmN3ECgqSgh8Nir/preview`)">
+                                    PROBLEM SOLVING CERTIFICATE BY
                                     HACKERRANK</p>
                                 <p class="awardtype">Certificate of Appreciation | October 2020</p>
                             </div>
