--- a/ERSpythonreason.html
+++ b/ERSpythonreason.html
@@ -26,7 +26,7 @@
     <div class="content">
         <h2>Employee Recruitment System in Python</h2>
         <p>As this is a python project this cannot be published.</p><p>So, I suggest you go through the repository and execute the code in your lab by downloading it from my repository.</p>
-        <p>For Repository, you can check out <a href="https://github.com/Shashank-mankala1/Employee-Recruitment-System-Python" class="anc">this link</a></p>
+        <p>For Repository, you can check out <a href="https://github.com/Shashank-mankala1/Employee-Recruitment-System-Python" target="_blank" class="anc">this link</a></p>
     </div>
 </body>
 </html>
